# dataschemes

./: .gitignore  Pipfile  pyproject.toml  setup.cfg
dataschemes/: asnative.py  asnative_test.py  asprimitive.py  asprimitive_test.py  atom.py  builtins.py  converter.py  default.py
