[tool.poetry]
name = "dataschemes"
version = "1.0"
description = "Dataclass Serialization"
authors = ["Ryan Hiebert <ryan@ryanhiebert.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
dataclasses = "^0.6.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pytest = "^4.1"
pytest-xdist = "^1.26"
coverage = "^4.5"
pytest-cov = "^2.6"
pylint = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
